--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1" /> -->
-    <meta content="width=device-width, initial-scale=1" name="viewport" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- <meta content="width=device-width, initial-scale=1" name="viewport" /> -->
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
@@ -17,7 +17,7 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
-    <title>React App</title>
+    <title>Art Gallery</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
