--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,8 @@
     <title>Art Gallery</title>
   </head>
   <body>
-    <script src="bower_components/aos/dist/aos.js"></script> 
+    <script src="bower_components/aos/dist/aos.js"></script>
+    <script type="text/javascript" src="vanilla-tilt.js"></script> 
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
