Complete website update

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/favicons/artstation.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- <meta content="width=device-width, initial-scale=1" name="viewport" /> -->
     <meta name="theme-color" content="#000000" />
@@ -17,12 +17,11 @@
     -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
-    <title>Art Gallery</title>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet" type="text/css">
+    <title>Karanth Art Gallery</title>
   </head>
   <body>
-    <script src="bower_components/aos/dist/aos.js"></script>
-    <script type="text/javascript" src="vanilla-tilt.js"></script> 
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
